Fixed Responsive issues and image alignments.

--- a/src/output.css
+++ b/src/output.css
@@ -1046,6 +1046,16 @@
       padding: calc(var(--spacing) * 6);
     }
   }
+  .max-sm\:p-8 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 8);
+    }
+  }
+  .max-sm\:p-10 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
   .max-sm\:px-1 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 1);
@@ -1425,6 +1435,16 @@
       margin-block: calc(var(--spacing) * 12);
     }
   }
+  .xl\:ml-20 {
+    @media (width >= 80rem) {
+      margin-left: calc(var(--spacing) * 20);
+    }
+  }
+  .xl\:ml-24 {
+    @media (width >= 80rem) {
+      margin-left: calc(var(--spacing) * 24);
+    }
+  }
   .xl\:w-8\/12 {
     @media (width >= 80rem) {
       width: calc(8/12 * 100%);
@@ -1494,6 +1514,21 @@
   .\32 xl\:my-14 {
     @media (width >= 96rem) {
       margin-block: calc(var(--spacing) * 14);
+    }
+  }
+  .\32 xl\:ml-4 {
+    @media (width >= 96rem) {
+      margin-left: calc(var(--spacing) * 4);
+    }
+  }
+  .\32 xl\:ml-20 {
+    @media (width >= 96rem) {
+      margin-left: calc(var(--spacing) * 20);
+    }
+  }
+  .\32 xl\:ml-26 {
+    @media (width >= 96rem) {
+      margin-left: calc(var(--spacing) * 26);
     }
   }
   .\32 xl\:w-10\/12 {
